[gd_scene load_steps=19 format=3 uid="uid://c5s05gik05p3j"]

[ext_resource type="Script" path="res://GUI/StartScreen.gd" id="1_0kti6"]
[ext_resource type="Texture2D" uid="uid://djvuiok6fs3ux" path="res://Assets/start_screen.png" id="1_vy43a"]
[ext_resource type="FontVariation" uid="uid://cy1srnumm2skd" path="res://Assets/Font-Precison.tres" id="2_1t8dm"]
[ext_resource type="FontVariation" uid="uid://dh7gj3mitjm5e" path="res://Assets/Font-Precison_II.tres" id="3_5f036"]
[ext_resource type="Texture2D" uid="uid://d2oolrvyxmx63" path="res://Assets/demo_screenshot.png" id="4_ri4rm"]
[ext_resource type="PackedScene" uid="uid://b8klsyyu7k8rx" path="res://GUI/FontExportOverride.tscn" id="4_t315q"]
[ext_resource type="Texture2D" uid="uid://j5ygv2uajfw4" path="res://Assets/MechJamVILogoWhitePNG.png" id="4_vq7yr"]
[ext_resource type="FontVariation" uid="uid://dml5osi0xwm0y" path="res://Assets/Font-Precison_Warn.tres" id="6_oj540"]

[sub_resource type="LabelSettings" id="LabelSettings_sxftd"]
font = ExtResource("2_1t8dm")
font_size = 12
outline_size = 4
outline_color = Color(0, 0, 0, 1)
shadow_size = 4
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_njtv4"]
font = ExtResource("2_1t8dm")
font_size = 18
outline_size = 6
outline_color = Color(0.423529, 0, 0, 1)
shadow_size = 12
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2iwf6"]
font = ExtResource("2_1t8dm")
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_cykny"]
font = ExtResource("2_1t8dm")
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_44tq3"]
font = ExtResource("2_1t8dm")
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ypl3v"]
font = ExtResource("3_5f036")
font_size = 18
font_color = Color(1, 0.682353, 0, 1)
outline_size = 4
outline_color = Color(0.905882, 0, 0, 1)
shadow_size = 20
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_vie6i"]
font = ExtResource("2_1t8dm")
font_size = 12
outline_size = 2
outline_color = Color(1, 0.890196, 0.768627, 1)
shadow_size = 4
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_33io1"]
font = ExtResource("2_1t8dm")
outline_size = 2

[sub_resource type="LabelSettings" id="LabelSettings_ns4xl"]
font = ExtResource("2_1t8dm")
font_color = Color(1, 0.835294, 0.596078, 1)
shadow_size = 12
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_4dptd"]
font = ExtResource("6_oj540")
font_size = 24
shadow_size = 8
shadow_color = Color(0, 0, 0, 1)

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0kti6")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_vy43a")

[node name="MarginContainer" type="MarginContainer" parent="."]
modulate = Color(1, 0.203922, 0.227451, 1)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -728.0
offset_right = 1442.0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/separation = -20

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1t8dm")
theme_override_font_sizes/font_size = 18
text = "This game is a"
horizontal_alignment = 1

[node name="FontExportOverride" parent="MarginContainer/VBoxContainer/Label" instance=ExtResource("4_t315q")]

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(32, 128)
layout_mode = 2
texture = ExtResource("4_vq7yr")
expand_mode = 3

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1t8dm")
theme_override_font_sizes/font_size = 18
text = "submission"
horizontal_alignment = 1

[node name="FontExportOverride" parent="MarginContainer/VBoxContainer/Label2" instance=ExtResource("4_t315q")]

[node name="MenuButtonMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -105.5
offset_right = 142.0
offset_bottom = 105.5
grow_vertical = 2
theme_override_constants/margin_left = 400
theme_override_constants/margin_top = 162

[node name="MenuButtons" type="VBoxContainer" parent="MenuButtonMargin"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 32

[node name="StartButton" type="Button" parent="MenuButtonMargin/MenuButtons"]
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 0, 0.254902, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0.992157, 0.772549)
theme_override_fonts/font = ExtResource("3_5f036")
theme_override_font_sizes/font_size = 24
text = "START"

[node name="FontExportOverride" parent="MenuButtonMargin/MenuButtons/StartButton" instance=ExtResource("4_t315q")]

[node name="GuideButton" type="Button" parent="MenuButtonMargin/MenuButtons"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0.254902, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0.992157, 0.772549)
theme_override_fonts/font = ExtResource("3_5f036")
theme_override_font_sizes/font_size = 24
text = "GUIDE"

[node name="FontExportOverride" parent="MenuButtonMargin/MenuButtons/GuideButton" instance=ExtResource("4_t315q")]

[node name="ExitButton" type="Button" parent="MenuButtonMargin/MenuButtons"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0.254902, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0.992157, 0.772549)
theme_override_fonts/font = ExtResource("3_5f036")
theme_override_font_sizes/font_size = 24
text = "EXIT"

[node name="FontExportOverride" parent="MenuButtonMargin/MenuButtons/ExitButton" instance=ExtResource("4_t315q")]

[node name="DemoUI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DemoBG" type="Control" parent="DemoUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="BG" type="Sprite2D" parent="DemoUI/DemoBG"]
modulate = Color(0.443137, 0.384314, 0.396078, 1)
texture = ExtResource("4_ri4rm")

[node name="OpticalIndicator" type="Control" parent="DemoUI"]
modulate = Color(1, 1, 1, 0.337255)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="DemoUI/OpticalIndicator"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8

[node name="VBoxContainer" type="VBoxContainer" parent="DemoUI/OpticalIndicator/MarginContainer"]
layout_mode = 2

[node name="OpticalLabel" type="Label" parent="DemoUI/OpticalIndicator/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "ENGAGING
"
label_settings = SubResource("LabelSettings_sxftd")
vertical_alignment = 2

[node name="EnemyLabel" type="Label" parent="DemoUI/OpticalIndicator/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "ENEMY TITLE :: ENEMY_HEALTH"
label_settings = SubResource("LabelSettings_njtv4")
vertical_alignment = 2

[node name="EnemyHealthBar" type="ColorRect" parent="DemoUI/OpticalIndicator/MarginContainer/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
size_flags_horizontal = 0
color = Color(0.764706, 0.713726, 0.662745, 0.65098)

[node name="DestructionLabel" type="Label" parent="DemoUI/OpticalIndicator/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "TARGET DESTROYED"
label_settings = SubResource("LabelSettings_2iwf6")

[node name="CoreHeatPanel" type="Control" parent="DemoUI"]
modulate = Color(1, 1, 1, 0.572549)
layout_mode = 3
anchors_preset = 0
offset_left = 1240.0
offset_top = 680.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="DemoUI/CoreHeatPanel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -387.0
offset_top = -96.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="DemoUI/CoreHeatPanel/MarginContainer"]
layout_mode = 2

[node name="CoreHeatHeader" type="Label" parent="DemoUI/CoreHeatPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "GUILLOTINE-07 TEMPERATURE:
"
label_settings = SubResource("LabelSettings_cykny")
horizontal_alignment = 2

[node name="CoreHeat" type="Label" parent="DemoUI/CoreHeatPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "200Â° C FROM PEAK"
label_settings = SubResource("LabelSettings_44tq3")
horizontal_alignment = 2

[node name="CoreHeatBar" type="ColorRect" parent="DemoUI/CoreHeatPanel"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -16.0
offset_top = -10.0
offset_right = 384.0
offset_bottom = 2.0
grow_horizontal = 0
grow_vertical = 0
rotation = 3.14159
color = Color(1, 0.717647, 0.611765, 0.580392)

[node name="AuxiliaryHeatPanel" type="Control" parent="DemoUI"]
modulate = Color(1, 1, 1, 0.278431)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="AuxiliaryHeatBar" type="ColorRect" parent="DemoUI/AuxiliaryHeatPanel"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
offset_left = 144.0
offset_top = 420.0
offset_right = 176.0
offset_bottom = 570.0
grow_vertical = 2
rotation = -3.14159
pivot_offset = Vector2(16, 90)
size_flags_horizontal = 4
color = Color(1, 0.603922, 0.486275, 0.419608)

[node name="AuxiliaryHeatVisual" type="MarginContainer" parent="DemoUI/AuxiliaryHeatPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -300.0
offset_right = 272.0
grow_vertical = 0
theme_override_constants/margin_left = 128
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 120

[node name="AuxiliaryHeatLimit" type="ColorRect" parent="DemoUI/AuxiliaryHeatPanel/AuxiliaryHeatVisual"]
custom_minimum_size = Vector2(64, 4)
layout_mode = 2
size_flags_vertical = 0
color = Color(1, 1, 1, 0.784314)

[node name="OverheatWarning" type="Label" parent="DemoUI/AuxiliaryHeatPanel/AuxiliaryHeatVisual/AuxiliaryHeatLimit"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -132.0
offset_top = 64.0
offset_right = 132.0
offset_bottom = 108.0
grow_horizontal = 2
text = "OVERHEATING"
label_settings = SubResource("LabelSettings_ypl3v")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AuxiliaryMaxHeat" type="Label" parent="DemoUI/AuxiliaryHeatPanel/AuxiliaryHeatVisual/AuxiliaryHeatLimit"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -71.5
offset_top = -34.0
offset_right = 71.5
grow_horizontal = 2
grow_vertical = 0
text = "MAX: 150Â° C"
label_settings = SubResource("LabelSettings_vie6i")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AuxiliaryHeatBase" type="ColorRect" parent="DemoUI/AuxiliaryHeatPanel/AuxiliaryHeatVisual"]
custom_minimum_size = Vector2(64, 4)
layout_mode = 2
size_flags_vertical = 8
color = Color(1, 1, 1, 0.784314)

[node name="MarginContainer" type="MarginContainer" parent="DemoUI/AuxiliaryHeatPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -552.0
offset_right = 292.0
grow_vertical = 0
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 480
theme_override_constants/margin_right = 0

[node name="VBoxContainer" type="VBoxContainer" parent="DemoUI/AuxiliaryHeatPanel/MarginContainer"]
layout_mode = 2

[node name="AuxiliaryHeatHeader" type="Label" parent="DemoUI/AuxiliaryHeatPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "AUXILIARY HEAT"
label_settings = SubResource("LabelSettings_33io1")
horizontal_alignment = 1

[node name="AuxiliaryHeat" type="Label" parent="DemoUI/AuxiliaryHeatPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "150.00Â° C"
label_settings = SubResource("LabelSettings_ns4xl")
horizontal_alignment = 1

[node name="CriticalPanel" type="Control" parent="DemoUI"]
modulate = Color(1, 1, 1, 0.662745)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="DemoUI/CriticalPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -62.5
offset_right = 62.5
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/margin_top = 20

[node name="CriticalLabel" type="Label" parent="DemoUI/CriticalPanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "CRITICAL  STRIKE"
label_settings = SubResource("LabelSettings_4dptd")
horizontal_alignment = 1

[node name="Tutorial" type="Control" parent="DemoUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InputsContainer" type="MarginContainer" parent="DemoUI/Tutorial"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -194.0
offset_top = -350.0
offset_right = 45.0
offset_bottom = -50.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_right = 80

[node name="Inputs" type="VBoxContainer" parent="DemoUI/Tutorial/InputsContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Header" type="Label" parent="DemoUI/Tutorial/InputsContainer/Inputs"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_oj540")
theme_override_font_sizes/font_size = 12
text = "CONTROLS"
horizontal_alignment = 1

[node name="FontExportOverride" parent="DemoUI/Tutorial/InputsContainer/Inputs/Header" instance=ExtResource("4_t315q")]

[node name="Move" type="Label" parent="DemoUI/Tutorial/InputsContainer/Inputs"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1t8dm")
theme_override_font_sizes/font_size = 18
text = "Move: WASD"

[node name="FontExportOverride" parent="DemoUI/Tutorial/InputsContainer/Inputs/Move" instance=ExtResource("4_t315q")]

[node name="Melee" type="Label" parent="DemoUI/Tutorial/InputsContainer/Inputs"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1t8dm")
theme_override_font_sizes/font_size = 18
text = "Melee: LMB"

[node name="FontExportOverride" parent="DemoUI/Tutorial/InputsContainer/Inputs/Melee" instance=ExtResource("4_t315q")]

[node name="Fire" type="Label" parent="DemoUI/Tutorial/InputsContainer/Inputs"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1t8dm")
theme_override_font_sizes/font_size = 18
text = "Fire: RMB"

[node name="FontExportOverride" parent="DemoUI/Tutorial/InputsContainer/Inputs/Fire" instance=ExtResource("4_t315q")]

[node name="Focus" type="Label" parent="DemoUI/Tutorial/InputsContainer/Inputs"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1t8dm")
theme_override_font_sizes/font_size = 18
text = "Focus: Shift
"

[node name="FontExportOverride" parent="DemoUI/Tutorial/InputsContainer/Inputs/Focus" instance=ExtResource("4_t315q")]

[node name="Rush" type="Label" parent="DemoUI/Tutorial/InputsContainer/Inputs"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1t8dm")
theme_override_font_sizes/font_size = 18
text = "Rush: Space"

[node name="FontExportOverride" parent="DemoUI/Tutorial/InputsContainer/Inputs/Rush" instance=ExtResource("4_t315q")]

[node name="Execute" type="Label" parent="DemoUI/Tutorial/InputsContainer/Inputs"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1t8dm")
theme_override_font_sizes/font_size = 18
text = "Execute: F"

[node name="FontExportOverride" parent="DemoUI/Tutorial/InputsContainer/Inputs/Execute" instance=ExtResource("4_t315q")]

[node name="PickUp" type="Label" parent="DemoUI/Tutorial/InputsContainer/Inputs"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1t8dm")
theme_override_font_sizes/font_size = 18
text = "Pick Up: Q"

[node name="FontExportOverride" parent="DemoUI/Tutorial/InputsContainer/Inputs/PickUp" instance=ExtResource("4_t315q")]

[node name="Overview" type="Label" parent="DemoUI/Tutorial"]
layout_mode = 0
offset_left = 769.0
offset_top = 421.0
offset_right = 1272.0
offset_bottom = 602.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("2_1t8dm")
text = "Control a versatile mech to destroy
enemies and progress to the
next room.

You must weave through projectiles
and wrestle the flow of combat."
horizontal_alignment = 2

[node name="FontExportOverride" parent="DemoUI/Tutorial/Overview" instance=ExtResource("4_t315q")]

[node name="CritGude" type="Label" parent="DemoUI/Tutorial"]
layout_mode = 0
offset_left = 460.0
offset_top = 60.0
offset_right = 973.0
offset_bottom = 323.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("2_1t8dm")
theme_override_font_sizes/font_size = 18
text = "Critical strikes uncalibrate enemies, leaving them open for execution. You may aim over an enemy to execute from any distance. 

Executions restore half of core heat and all of auxiliary heat."
horizontal_alignment = 1
autowrap_mode = 2

[node name="FontExportOverride" parent="DemoUI/Tutorial/CritGude" instance=ExtResource("4_t315q")]

[node name="HeatGuide" type="Label" parent="DemoUI/Tutorial"]
layout_mode = 0
offset_left = 12.0
offset_top = 459.0
offset_right = 582.0
offset_bottom = 697.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("2_1t8dm")
theme_override_font_sizes/font_size = 18
text = "Firing, rushing, and taking damage all raise auxiliary heat. When it exceeds the heat limit, your core heat begins to fall.


While focused, the auxiliary cool rate is lowered."
autowrap_mode = 2

[node name="FontExportOverride" parent="DemoUI/Tutorial/HeatGuide" instance=ExtResource("4_t315q")]

[node name="AimGuide" type="Label" parent="DemoUI/Tutorial"]
layout_mode = 0
offset_left = 13.0
offset_top = 211.0
offset_right = 478.0
offset_bottom = 402.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("2_1t8dm")
theme_override_font_sizes/font_size = 18
text = "Focusing looks forward, aims the gun, reduces spread, and allows the blade to be thrusted.

Movement is slowed."
autowrap_mode = 2

[node name="FontExportOverride" parent="DemoUI/Tutorial/AimGuide" instance=ExtResource("4_t315q")]

[node name="ReturnButton" type="Button" parent="DemoUI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -584.0
offset_right = 240.0
offset_bottom = -529.0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0, 0.254902, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0.992157, 0.772549)
theme_override_fonts/font = ExtResource("3_5f036")
theme_override_font_sizes/font_size = 28
text = "RETURN"

[node name="FontExportOverride" parent="DemoUI/ReturnButton" instance=ExtResource("4_t315q")]
